--- a/views/layout.slim
+++ b/views/layout.slim
@@ -16,5 +16,13 @@ html
         ul.nav.navbar-nav
           li
             a href='/commit_activity' Commit Activity
+          li
+            a href='/pulls' Pull Requests
+          li
+            a href='/issues' Issues
+          li
+            a href='/reviews' Reviews
+          li
+            a href='/pushes' Pushes
 
     == yield
