added comments and issues pages

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -19,6 +19,8 @@ html
           li
             a href='/pulls' Pull Requests
           li
+            a href='/comments' Comments
+          li
             a href='/issues' Issues
           li
             a href='/reviews' Reviews
