added issue comments and comments renamed to pull request reviews

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -19,11 +19,11 @@ html
           li
             a href='/pulls' Pull Requests
           li
-            a href='/comments' Comments
+            a href='/reviews' Pull Requests Reviews
           li
             a href='/issues' Issues
           li
-            a href='/reviews' Reviews
+            a href='/comments' Issues Comments
           li
             a href='/pushes' Pushes
 
