added last hour active users.

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -25,6 +25,8 @@ html
           li
             a href='/comments' Issues Comments
           li
-            a href='/pushes' Pushes
+            a href='/commits' Commits
+          li
+            a href='/active_users' Active Users
 
     == yield
