added last day active users.

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -27,6 +27,8 @@ html
           li
             a href='/commits' Commits
           li
-            a href='/active_users' Active Users
+            a href='/active_users' Last Hour Active Users
+          li
+            a href='/last_day_active_users' Last Day Active Users
 
     == yield
